# discord-live-translator

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitmodules  .prettierrc.js  Dockerfile  LICENSE  README.md  app.js  binding.gyp  build.sh  docker-compose.dev.yml  docker-compose.prod.yml  langData.json  nodemon.json  package.json  pnpm-lock.yaml  requirements.txt  rust-analyzer.toml  storage.js  tsconfig.json
.github/workflows/: build-docker.yml  codeql.yml
clientHandlers/: message.js  ready.js
commands/: help.js  join.js  languages.js  leave.js  notFound.js  start.js  status.js  stop.js
lib/whisper/: binding.cpp  index.ts
python/: readText.py
src/: app.ts  deploy.ts  env.ts  interactions.ts  languages.ts  register.ts  types.ts
src/commands/: help.ts  join.ts  languages.ts  leave.ts  notFound.ts  start.ts  status.ts  stop.ts
src/lib/tts/: preload_models.py  read_text.py
src/lib/whisper/: binding.cpp  index.ts  worker.js
src/processors/: convertRecording.ts  readText.ts  recognizeRecording.ts  recordAudio.ts  translate.ts
src/utils/: AudioQueue.ts  PlayerPool.ts  getConfig.ts  is.ts  parseCommand.ts  settingsStorage.ts  telemetry.ts  validateEnv.ts  writeToLog.ts
stt/: .dockerignore  Cargo.toml  Dockerfile
stt/src/: main.rs
utils/: addAudioPadding.js  convertRecording.js  getPreferences.js  parseCommand.js  readText.js  recognizeRecording.js  recordAudio.js  translate.js  validateEnv.js
watson/: languageTranslator.js  speechToText.js  textToSpeech.js
